Switched to JDK 1.7

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,7 +31,8 @@ endorsed.classpath=
 excludes=
 file.reference.javax.faces-2.1.7.jar=libs/javax.faces-2.1.7.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar=libs/mysql-connector-java-5.1.23-bin.jar
-file.reference.slenderware-database.jar=libs/slenderware-database.jar
+file.reference.slender-persistence.jar=C:\\Users\\Heinrich\\Workspace\\Slenderware\\slenderware-webservice-rest\\libs\\slender-persistence.jar
+file.reference.slender-persistence.jar-1=libs/slender-persistence.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -41,7 +42,8 @@ javac.classpath=\
     ${libs.jpa2-persistence.classpath}:\
     ${file.reference.javax.faces-2.1.7.jar}:\
     ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
-    ${file.reference.slenderware-database.jar}
+    ${file.reference.slender-persistence.jar}:\
+    ${file.reference.slender-persistence.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -68,7 +70,7 @@ javadoc.version=false
 javadoc.windowtitle=
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
-platform.active=default_platform
+platform.active=JDK_1.7
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
