--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,8 +31,7 @@ endorsed.classpath=
 excludes=
 file.reference.javax.faces-2.1.7.jar=libs/javax.faces-2.1.7.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar=libs/mysql-connector-java-5.1.23-bin.jar
-file.reference.slender-persistence.jar=C:\\Users\\Heinrich\\Workspace\\Slenderware\\slenderware-webservice-rest\\libs\\slender-persistence.jar
-file.reference.slender-persistence.jar-1=libs/slender-persistence.jar
+file.reference.SlenderwareDomain.jar=libs/SlenderwareDomain.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -42,8 +41,7 @@ javac.classpath=\
     ${libs.jpa2-persistence.classpath}:\
     ${file.reference.javax.faces-2.1.7.jar}:\
     ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
-    ${file.reference.slender-persistence.jar}:\
-    ${file.reference.slender-persistence.jar-1}
+    ${file.reference.SlenderwareDomain.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
