--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,7 +31,7 @@ endorsed.classpath=
 excludes=
 file.reference.javax.faces-2.1.7.jar=libs/javax.faces-2.1.7.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar=libs/mysql-connector-java-5.1.23-bin.jar
-file.reference.SlenderwareDomain.jar=libs/SlenderwareDomain.jar
+file.reference.slender-domain-server.jar=libs/slender-domain-server.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -41,7 +41,7 @@ javac.classpath=\
     ${libs.jpa2-persistence.classpath}:\
     ${file.reference.javax.faces-2.1.7.jar}:\
     ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
-    ${file.reference.SlenderwareDomain.jar}
+    ${file.reference.slender-domain-server.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
